# polyhedron_gravity

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  readthedocs.yml
cmake/: FindLIBIGL.cmake
docs/: Doxyfile  environment.yml
docs/sphinx/: conf.py  index.rst
docs/sphinx/api/: mesh.rst
include/: cgal.hpp  cgal_types.hpp  cube.hpp  loader.hpp  mesh.hpp  polyhedron.hpp  potential.hpp
scripts/: build_boost.sh  build_cgal.sh  build_cmake.sh  build_travis.sh  setup_repo.sh  travis_setup.sh
src/: cgal.cpp  cube.cpp  loader.cpp  main.cpp  mesh.cpp  polyhedron.cpp  potential.cpp
tests/: test_cgal.cpp  test_gtest.cpp  test_libigl.cpp  test_loader.cpp  test_mesh.cpp  test_polyhedron.cpp  test_potential.cpp
